# ROS_Inspection

./: .gitmodules  Dockerfile  README.md
inspection_master/: CMakeLists.txt  package.xml
inspection_master/launch/: gazebo.launch  inspection_iris.launch  keyboard_iris.launch  mavros.launch  trajectory1.launch
inspection_master/models/drones/Vulcan_G401/: Vulcan_G401.sdf  Vulcan_G401.sdf.jinja  model.config  model.sdf
inspection_master/models/drones/Vulcan_G401/meshes/: rs_lidar.stl  zed2.stl
inspection_master/models/drones/iris/: iris.sdf.jinja
inspection_master/models/planes/: A320.sdf  cube.sdf
inspection_master/rviz/: inspection.rviz
inspection_master/src/: laserscan_pointcloud.py  offb_handler.cpp  path_ref.py  ref_offboard_control.cpp  transforms.cpp
inspection_master/worlds/: A320.world  A321.world  MD80_test.world
inspection_master/worlds/MD80/: model.config  model.sdf  test_MD80
px4_sim_gazebo/: CMakeLists.txt  package.xml
px4_sim_gazebo/launch/: guided_inspection.launch  mavros.launch  simple_ref.launch
px4_sim_gazebo/src/: offboard_control.cpp  path_ref.py  ref_node.cpp  ref_offboard_control.cpp
