<?xml version="1.0"?>
<package format="2">
  <name>inspection_master</name>
  <version>0.0.1</version>
  <description>The inspection_master package</description>
  <maintainer email="danfoot4567@gmail.com">Noe-Sanchez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
